--- a/MyWebApp/pom.xml
+++ b/MyWebApp/pom.xml
@@ -1,6 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <properties>
+        <java.version>17</java.version>
+   </properties>
   <groupId>com.dept.app</groupId>
   <artifactId>MyWebApp</artifactId>
   <packaging>war</packaging>
